# ic-game-terminal

icmt/: Cargo.toml
icmt/src/lib/: mod.rs
